<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_income"
            android:title="@string/income" />
        <item
            android:id="@+id/nav_cost"
            android:title="@string/cost" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics" />

    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/help"/>
    </group>


</menu>
